[project]
name = "playstation_family-ha"
version = "0.1.0"
description = "PlayStation Family parental-controls integration for Home Assistant"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "psnfamily==0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "homeassistant>=2024.12.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
